fix: site spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,10 +15,6 @@
     @apply flex-1;
   }
 
-  .container {
-    max-width: 900px;
-  }
-
   details > summary {
     list-style: none;
   }
